# set09119

./: .gitignore  CMakeLists.txt  DownloadProject.cmake  LICENSE.txt  README.md  cmake_build_vs15.bat
OldContent/cw_template/: CMakeLists.txt
OldContent/lib_phys_utils/: phys_utils.cpp
OldContent/praticals/1_kinematics/: ik.h  main.cpp
OldContent/praticals/2_timing_1_simple/: timing_simple.cpp
OldContent/praticals/2_timing_3_fixed_timestep/: fixed_timestep.cpp
OldContent/praticals/3_Integration/: Euler.cpp  main.cpp  main.h  rk4.cpp
OldContent/praticals/4_basic_engine_design/: game.h  main.cpp  physics.h
OldContent/praticals/5_particles/: collision.cpp  game.cpp  game.h
OldContent/praticals/6_rigid_body/: cPhysicsComponents.cpp  cPhysicsComponents.h  collision.cpp  collision.h
OldContent/res/shaders/: phys_basic.frag  phys_basic.vert  phys_phong.frag
assessments/: Assessment 1 Coversheet.docx  Assessment 2 Coversheet.docx  assessment1.tex
code/: CMakeLists.txt
code/01_particle_animation/: 01_particle_animation.cpp  CMakeLists.txt  Mesh.cpp  Mesh.h  Shader.h
code/02_particles_framework/: Application.cpp  Application.h  CMakeLists.txt  PhysicsEngine.cpp  PhysicsEngine.h  PhysicsObject.cpp  PhysicsObject.h
code/03_constraints_framework/: Application.cpp  CMakeLists.txt  Force.h  Mesh.h  Path.cpp  PhysicsEngine.cpp  PhysicsEngine.h  PhysicsObject.cpp  PhysicsObject.h
code/03_constraints_framework/resources/shaders/: core.frag  core.vert  core_transp.frag
code/04_rigid_body_framework/: Application.cpp  CMakeLists.txt  Camera.h  Force.cpp  Mesh.cpp  Mesh.h  Path.h  PhysicsEngine.cpp  PhysicsEngine.h  PhysicsObject.cpp  PhysicsObject.h  Shader.h
code/04_rigid_body_framework/resources/shaders/: core_blue.frag
cw_template/: CMakeLists.txt  readme.md
cw_template/src/: main.cpp
lib_phys_utils/: phys_utils.cpp  phys_utils.h
practicals/src/: practical_1.tex  practical_2.tex  practical_3.tex  practical_4.tex  practical_5.tex  practical_6.tex  practical_7.tex
praticals/0_introduction/: main.cpp
praticals/1_kinematics/: ik.h  ik_1dof.cpp  ik_3dof.cpp  ik_jacob.cpp  main.cpp
praticals/2_dynamics/: main.cpp
praticals/2_timing_1_simple/: timing_simple.cpp
praticals/2_timing_2_unfixed_timestep/: unfixed_timestep.cpp
praticals/2_timing_3_fixed_timestep/: fixed_timestep.cpp
praticals/3_Integration/: main.cpp  rk4.cpp  verlet.cpp
praticals/4_basic_engine_design/: game.cpp  physics.cpp
praticals/5_particles/: collision.cpp  collision.h  game.cpp  game.h  main.cpp  physics.cpp  physics.h
praticals/6_rigid_body/: cPhysicsComponents.cpp  cPhysicsComponents.h  collision.cpp  game.cpp  game.h  main.cpp  physics.cpp  physics.h
res/shaders/: phys_grid.frag  phys_phong.vert
